# imagineer

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile
.github/actions/setup-dav1d/: action.yml
.github/workflows/: build-release-binaries.yml  clippy.yml  msrv.yml  test.yml
.justfiles/: dav1d.just  dav1d_prerequisites.just
crates/sic_cli_ops/: Cargo.toml
crates/sic_cli_ops/src/: lib.rs  operations.rs
crates/sic_core/: Cargo.toml
crates/sic_core/src/: animated.rs  lib.rs
crates/sic_image_engine/: Cargo.toml
crates/sic_image_engine/src/: engine.rs  errors.rs  lib.rs
crates/sic_image_engine/src/operations/: blur.rs  brighten.rs  contrast.rs  crop.rs  diff.rs  dither.rs  dither_color.rs  dither_quant.rs  draw_text.rs  filter3x3.rs  flip_horizontal.rs  flip_vertical.rs  grayscale.rs  horizontal_gradient.rs  hue_rotate.rs  index_colors.rs  index_colors_quant.rs  invert.rs  mod.rs  overlay.rs  resize.rs  rotate180.rs  rotate270.rs  rotate90.rs  threshold.rs  unsharpen.rs  vertical_gradient.rs
crates/sic_image_engine/src/wrapper/: image_path.rs  mod.rs
crates/sic_io/: Cargo.toml
crates/sic_io/src/: decode.rs  encode.rs  errors.rs  preprocessor.rs
crates/sic_io/src/encode/: dynamic.rs
crates/sic_io/src/encode_settings/: gif.rs
crates/sic_io/src/preprocessor/: color_type.rs  pick_frame.rs
crates/sic_parser/: Cargo.toml
crates/sic_parser/src/: grammar.pest  lib.rs  named_value.rs  rule_parser.rs  value_parser.rs
crates/sic_testing/: Cargo.toml
crates/sic_testing/src/: lib.rs
examples/: gen_completions.rs
resources/help-pages/: about.txt  image_operations.txt
src/: main.rs
src/cli/: app.rs  config.rs  glob_base_dir.rs  license.rs  mod.rs  pipeline.rs
tests/: cli_convert.rs  cli_glob.rs  cli_image_operation_args.rs  cli_image_operations_script_from_file.rs  cli_imageproc_ops.rs  cli_license.rs
