[package]
name = "imagineer"
version = "0.24.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Accessible image processing and conversion from the terminal (and a front-end for the 'image' crate). Formerly 'sic'"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "README.md"
exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
    ".travis.yml",
    "RELEASE_STEPS.md",
]
keywords = ["image", "converter", "cli", "front-end", "image-cli"]
categories = ["multimedia::images", "command-line-utilities"]

edition = "2024"
rust-version = "1.86"

[package.metadata.release]
tag-prefix = ""

[dependencies]
sic_cli_ops = { workspace = true }
sic_core = { workspace = true }
sic_io = { workspace = true }
sic_image_engine = { workspace = true }
sic_parser = { workspace = true }

anyhow = "1"
atty = "0.2.14"
clap = "2.34.0"
globwalk = "0.8.1"
open = "5.3.2"

[dev-dependencies]
clap = "2.34.0" # for examples/gen_completions.rs
parameterized = "2.0.0"
yare = "3"

[features]
default = ["nasm"]
nasm = ["sic_core/nasm"]

output-test-images = []

[[bin]]
name = "ig"
path = "src/main.rs"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[workspace]
resolver = "3"
members = [
    "crates/sic_cli_ops",
    "crates/sic_core",
    "crates/sic_image_engine",
    "crates/sic_io",
    "crates/sic_parser",
    "crates/sic_testing",
]

[workspace.dependencies]
# internal crates
sic_cli_ops = { version = "0.23.0", path = "crates/sic_cli_ops" }
sic_core = { version = "0.23.0", path = "crates/sic_core" }
sic_io = { version = "0.23.0", path = "crates/sic_io" }
sic_image_engine = { version = "0.23.0", path = "crates/sic_image_engine" }
sic_parser = { version = "0.23.0", path = "crates/sic_parser" }
sic_testing = { version = "0.23.0", path = "crates/sic_testing" }

# common dependencies
thiserror = "2"

# common dev-dependencies
parameterized = "2.0.0"
