[package]
name = "sic_cli_ops"
version = "0.23.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: parses images operations invoked from the cli."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.61"

[dependencies]
sic_image_engine = { workspace = true }
sic_parser = { workspace = true }

strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2"

[dev-dependencies]
sic_core = { workspace = true }
sic_testing = { workspace = true }
parameterized = { workspace = true }

[features]
imageproc-ops = []
