[package]
name = "sic_cli_ops"
version = "0.23.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: parses images operations invoked from the cli."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition.workspace = true
rust-version.workspace = true

[dependencies]
sic_image_engine = { workspace = true }
sic_parser = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sic_core = { workspace = true }
sic_testing = { workspace = true }
parameterized = { workspace = true }

[features]
imageproc-ops = []
