[package]
name = "sic_core"
version = "0.23.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Common types and re-exports for the 'imagineer' image cli project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2024"
rust-version = "1.86"

[dependencies]
image = { version = "0.25.6", features = ["rayon"] }
imageproc = { version = "0.25.0" }
ab_glyph = { version = "0.2.31" }
thiserror = { workspace = true }

[features]
nasm = ["image/nasm"]
