[package]
name = "sic_core"
version = "0.23.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Common types and re-exports for the 'imagineer' image cli project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition.workspace = true
rust-version.workspace = true

[dependencies]
image = { version = "0.25.10", features = ["rayon", "color_quant"] }
imageproc = { version = "0.27.0" }
ab_glyph = { version = "0.2.32" }
color_quant = "1.1.0" # nb: image depends on ^1, while ^2 is also available
thiserror = { workspace = true }

[features]
nasm = ["image/nasm"]
avif-decoder = ["image/avif-native"] # avif encoder (via ravif) is enabled by default, decoder requires native libdav1d
