[package]
name = "sic_image_engine"
version = "0.23.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Provides abstractions for the application of image operations of the 'imagineer' image cli project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2024"
rust-version = "1.86"

[dependencies]
sic_core = { workspace = true }
sic_io = { workspace = true }

strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = { workspace = true }
rayon = "1.11.0"

[dev-dependencies]
sic_testing = { workspace = true }

[features]
output-test-images = []
