[package]
name = "sic_image_engine"
version = "0.23.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Provides abstractions for the application of image operations of the 'imagineer' image cli project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2024"
rust-version = "1.87"

[dependencies]
sic_core = { workspace = true }
sic_io = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
rayon = "1.11.0"

[dev-dependencies]
sic_testing = { workspace = true }

[features]
output-test-images = []
