[package]
name = "sic_io"
version = "0.23.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Common i/o operations and image format handling for the 'imagineer' image cli project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2024"
rust-version = "1.86"

[dependencies]
sic_core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
parameterized = { workspace = true }
sic_testing = { workspace = true }
