[package]
name = "sic_parser"
version = "0.23.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Parser for the image operation script used by the 'imagineer' image cli"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2024"
rust-version = "1.86"

[dependencies]
sic_core = { workspace = true }
sic_image_engine = { workspace = true }

pest = "2.7.15"
pest_derive = "2.7.15"
thiserror = { workspace = true }

[dev-dependencies]
sic_testing = { workspace = true }
parameterized = { workspace = true }
