[package]
name = "sic_testing"
version = "0.23.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Commonly used testing operations for the 'imagineer' image cli project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2024"
rust-version = "1.86"

[dependencies]
sic_core = { workspace = true }
parameterized = { workspace = true }
